--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.0.9",
     "@tailwindcss/postcss": "^4.0.9",
+    "bcryptjs": "^3.0.2",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "install": "^0.13.0",
     "node-webcam": "^0.8.2",
     "peer": "^1.0.2",
